crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_class_conditional.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Bool": true
            },
            "span": {
              "start": 11,
              "end": 15
            }
          },
          "then_branch": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Class": {
                      "name": "A",
                      "modifiers": {
                        "is_abstract": false,
                        "is_final": false,
                        "is_readonly": false
                      },
                      "extends": null,
                      "implements": [],
                      "members": [],
                      "attributes": []
                    }
                  },
                  "span": {
                    "start": 23,
                    "end": 33
                  }
                }
              ]
            },
            "span": {
              "start": 17,
              "end": 35
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 7,
        "end": 35
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 35
  }
}
