crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_class_enum.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Enum": {
          "name": "A",
          "scalar_type": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Case": {
                  "name": "class",
                  "value": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 20,
                "end": 32
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 33
      }
    },
    {
      "kind": {
        "Enum": {
          "name": "B",
          "scalar_type": null,
          "implements": [
            {
              "parts": [
                "Bar"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 52,
                "end": 55
              }
            },
            {
              "parts": [
                "Baz"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 57,
                "end": 61
              }
            }
          ],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 34,
        "end": 64
      }
    },
    {
      "kind": {
        "Enum": {
          "name": "C",
          "scalar_type": {
            "parts": [
              "int"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 73,
              "end": 77
            }
          },
          "implements": [
            {
              "parts": [
                "Bar"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 88,
                "end": 92
              }
            }
          ],
          "members": [
            {
              "kind": {
                "Case": {
                  "name": "Foo",
                  "value": {
                    "kind": {
                      "Int": 1
                    },
                    "span": {
                      "start": 109,
                      "end": 110
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 98,
                "end": 112
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 65,
        "end": 113
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 113
  }
}
